# Dobryimilnik

./: .gitignore  AGENTS.md  Makefile  README.md  compose.yml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_domain_schemas.py  0002_create_import_staging.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: health.py  router.py
backend/app/core/: __init__.py  config.py  db.py  errors.py  pagination.py  schemas.py  security.py
backend/app/domains/analytics/: models.py  repository.py  service.py
backend/app/domains/catalog/: models.py  repository.py  service.py
backend/app/domains/content/: models.py  repository.py  service.py
backend/app/domains/imports/: __init__.py  api.py  catalog_archive.py  csv_contract.py  models.py  repository.py  schemas.py  service.py  validation.py
backend/app/domains/orders/: __init__.py  models.py  repository.py  service.py
backend/app/domains/users/: models.py
backend/scripts/: import_catalog_archive.py
backend/tests/: test_catalog_archive_import.py  test_core_scaffold.py  test_docs_language.py  test_domain_packages.py  test_health.py  test_imports_api.py  test_imports_contract.py  test_imports_idempotency.py  test_imports_repository.py  test_imports_validation.py  test_migrations.py  test_settings.py
docs/: ci.md  database-migrations.md  environment-and-secrets.md  local-development.md
frontend/: Dockerfile  package-lock.json  package.json
(+37 files in other folders)
